Fix spacing in footer

--- a/apps/frontend/src/components/Footer.module.scss
+++ b/apps/frontend/src/components/Footer.module.scss
@@ -1,6 +1,7 @@
 .footer {
 	border-top: 2px solid;
 	border-color: var(--color-border);
+	//padding: 1em;
 	background-color: var(--color-background-secondary);
 
 	display: flex;
@@ -31,6 +32,13 @@
 }
 
 .field {
+	display: flex;
+	width: 50%;
+	flex-direction: column;
+	align-items: center;
+}
+
+.right {
 	display: flex;
 	width: 50%;
 	flex-direction: column;
